# Geometry-Kernel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
include/geometry_kernel/: geomemory.hpp
python/geometry_kernel/: __init__.py  evaluation.py  exposure.py  poincare.py
python/geometry_kernel/datasets/: __init__.py  movielens1m.py
tests/cpp/: geomemory_test.cpp
tests/python/: test_evaluation.py  test_exposure.py  test_movielens1m.py  test_poincare.py
